5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1644_2443.log
== SUBMITION (2019-04-11 19:02:38) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print((r*a**2)*(3*r-a)/3)
if(op==2):
	print((4*pi*r**3)/3)
-- EXECUTION TIME:
0.219489
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
10.055354166666667
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.33908869221415
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:02:42) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print((r*a**2)*(3*r-a)/3)
if(op==2):
	print((4*pi*r**3)/3)
-- OUTPUT:
10.055354166666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:03:49) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round((r*a**2)*(3*r-a)/3),4)
if(op==2):
	print(round((4*pi*r**3)/3),4)
-- EXECUTION TIME:
0.169613
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
10 4
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:03:53) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round((r*a**2)*(3*r-a)/3),4)
if(op==2):
	print(round((4*pi*r**3)/3),4)
-- OUTPUT:
10 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:04:04) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round((r*a**2)*(3*r-a)/3),4)
if(op==2):
	print(round((4*pi*r**3)/3),4)
-- OUTPUT:
10 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:06:05) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round( ((r*a**2)*(3*r-a)/3),4 )
if(op==2):
	print(round( ((4*pi*r**3)/3),4 )
-- EXECUTION TIME:
0.124389
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 9
    if(op==2):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:06:07) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round( ((r*a**2)*(3*r-a)/3),4 )
if(op==2):
	print(round( ((4*pi*r**3)/3),4 )
-- ERROR:
File "XXXX", line 9
    if(op==2):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:06:42) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round( ((r*a**2)*(3*r-a)/3),4 ))
if(op==2):
	print(round( ((4*pi*r**3)/3),4 ))
-- EXECUTION TIME:
0.156556
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
10.0554
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:06:46) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	print(round( ((r*a**2)*(3*r-a)/3),4 ))
if(op==2):
	print(round( ((4*pi*r**3)/3),4 ))
-- OUTPUT:
10.0554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:09:27) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ((r*a**2) * (3*r - a) )/3
	print(round(v,4))
	print(round( ((r*a**2)*(3*r-a)/3),4 ))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))
-- EXECUTION TIME:
0.130455
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
10.0554
10.0554
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:10:16) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ((r*(a**2)) * (3*r - a) )/3
	print(round(v,4))
	print(round( ((r*(a**2))*(3*r-a)/3),4 ))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))
-- EXECUTION TIME:
0.17839
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
10.0554
10.0554
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:12:19) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ((r*(a**2)) * (3*r - a) )/3
	print(round(v,4))
	print(round( ((r*(a**2))*(3*r-a)/3),4 ))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))
-- OUTPUT:
10.0554
10.0554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:12:46) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ((r*(a**2)) * (3*r - a) )/3
	print(round(v,4))
	print(round( ((r*(a**2))*(3*r-a)/3),5 ))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,5))
-- OUTPUT:
10.0554
10.05535
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:14:29) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = (( pi*(a**2)) * (3*r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4)
-- EXECUTION TIME:
0.195996
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:20) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4)
-- EXECUTION TIME:
0.131406
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:15:22) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4)
-- ERROR:
File "XXXX", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:40) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4)

-- EXECUTION TIME:
0.106881
-- ERROR:
  File "/home/codebench/codes/1644/2443/main.py", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:15:55) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))

-- EXECUTION TIME:
0.280578
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:00) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:16:04) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))

-- EXECUTION TIME:
0.163613
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:16:06) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v = (4*pi*r**3)/3
	print(round(v,4))

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:18:19) 
-- CODE:
from math import *

r = float(input())
a = float(input())
op = int(input())

if(op==1):
	v = ( ( pi*a**2) * (3 * r - a) )/3
	print(round(v,4))
if(op==2):
	v1 = (4*pi*r**3)/3
	v2 = ( ( pi*a**2) * (3 * r -a) )/3
	print(round((v1-v2),4))

-- EXECUTION TIME:
0.198499
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
